--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,4 +97,15 @@
         .main-menu ul li a:hover {
           background-color: grey; }
 
+.c-hours-grid {
+  width: 50%;
+  float: left;
+  height: 333px; }
+  .c-hours-grid-title {
+    width: 100%;
+    height: 12%;
+    float: left;
+    display: block;
+    background-color: #7091b7; }
+
 /*# sourceMappingURL=style.css.map */
