--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,3 +100,16 @@
     }
   }
 }
+
+.c-hours-grid {
+  width: 50%;
+  float: left;
+  height: 333px;
+  &-title {
+    width: 100%;
+    height: 12%;
+    float: left;
+    display: block;
+    background-color: rgb(112, 145, 183);
+  }
+}
