--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -101,6 +101,30 @@
   }
 }
 
+.main-admin-menu {
+  display: block;
+  float: left;
+  width: 100%;
+  border-bottom: 1px solid grey;
+  box-shadow: 0 1px 9px 1px rgba(0, 0, 0, .3);
+  ul {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    li {
+      display: inline-block;
+      a {
+        line-height: 70px;
+        padding: 10px 20px;
+        text-decoration: none;
+        &:hover {
+          background-color: grey;
+        }
+      }
+    }
+  }
+}
+
 .c-hours-grid {
   width: 50%;
   float: left;
@@ -111,5 +135,9 @@
     float: left;
     display: block;
     background-color: rgb(112, 145, 183);
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
   }
 }
