--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@
 .ava-name {
   display: block;
   float: left;
-  width: 20%; }
+  width: 25%; }
   .ava-name-img {
     width: 60px;
     height: 60px;
@@ -83,7 +83,7 @@
 .main-menu {
   display: block;
   float: left;
-  width: 80%; }
+  width: 75%; }
   .main-menu ul {
     text-align: center;
     padding: 0;
@@ -159,6 +159,9 @@
 .search {
   padding: 10px; }
   .search-city {
+    margin-top: 20px;
+    display: block; }
+  .search-service {
     margin-top: 20px;
     display: block; }
 
