--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,7 +65,7 @@
 .ava-name {
   display: block;
   float: left;
-  width: 20%;
+  width: 25%;
   &-img {
     @include circleImg(60px, 60px);
     display: block;
@@ -82,7 +82,7 @@
 .main-menu {
   display: block;
   float: left;
-  width: 80%;
+  width: 75%;
   ul {
     text-align: center;
     padding: 0;
@@ -175,6 +175,10 @@
 .search {
   padding: 10px;
   &-city {
+    margin-top: 20px;
+    display: block;
+  }
+  &-service {
     margin-top: 20px;
     display: block;
   }
