--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,4 +165,33 @@
     margin-top: 20px;
     display: block; }
 
+.result-item {
+  display: block;
+  float: left;
+  width: 140px;
+  height: 200px;
+  margin: 20px; }
+  .result-item-photo {
+    width: 140px;
+    height: 140px;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    overflow: hidden; }
+    .result-item-photo img {
+      min-height: 100%;
+      min-width: 100%;
+      max-width: 100%;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+  .result-item-name {
+    width: 140px;
+    text-align: center; }
+
 /*# sourceMappingURL=style.css.map */
