--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -200,3 +200,39 @@
     text-align: center;
   }
 }
+
+.master-box {
+  display: block;
+  float: left;
+  width: 100%;
+  height: 150px;
+  &-photo {
+    display: block;
+    float: left;
+    width: 150px;
+    height: 150px;
+    @include circleImg(140px, 140px);
+  }
+  &-descr {
+    padding-left: 30px;
+    display: block;
+    float: left;
+    height: 150px;
+    &-name {
+      display: block;
+      float: left;
+      width: 100%;
+    }
+    &-portfolio {
+      display: block;
+      float: left;
+      width: 100%;
+    }
+    &-btn {
+      display: block;
+      float: left;
+      width: 100%;
+    }
+    
+  }
+}
