--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -236,3 +236,12 @@
     
   }
 }
+
+.my-service-box {
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.add-service-box {
+  padding-top: 30px;
+}
