--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,4 +245,13 @@
 .add-service-box {
   padding-top: 30px; }
 
+.light_green {
+  background-color: #879bbc; }
+
+.msg-success {
+  display: block;
+  float: left;
+  width: 100%;
+  background-color: #4cae4c; }
+
 /*# sourceMappingURL=style.css.map */
