--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -245,3 +245,14 @@
 .add-service-box {
   padding-top: 30px;
 }
+
+.light_green {
+  background-color: rgb(135, 155, 188);
+}
+
+.msg-success {
+  display: block;
+  float: left;
+  width: 100%;
+  background-color: #4cae4c;
+}
