--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,8 @@
 
 .my-service-box {
   padding-top: 20px;
-  padding-left: 20px; }
+  padding-left: 20px;
+  padding-right: 20px; }
 
 .add-service-box {
   padding-top: 30px; }
@@ -252,6 +253,8 @@
   display: block;
   float: left;
   width: 100%;
-  background-color: #4cae4c; }
+  background-color: rgba(171, 255, 103, 0.54);
+  margin: 10px;
+  border-radius: 3px; }
 
 /*# sourceMappingURL=style.css.map */
